--- a/requirements.txt
+++ b/requirements.txt
@@ -1,82 +1,10 @@
-aiohttp==3.9.3
-aiosignal==1.4.0
-annotated-types==0.7.0
-anyio==4.11.0
-asyncio==3.4.3
-attrs==25.3.0
-autobahn==19.11.2
-Automat==25.4.16
-aws-lambda-powertools==1.25.5
-aws-xray-sdk==2.14.0
-bidict==0.23.1
-blinker==1.9.0
-boto3==1.40.45
-botocore==1.40.45
-certifi==2025.8.3
-cffi==2.0.0
-charset-normalizer==3.4.3
-click==8.3.0
-colorama==0.4.6
-constantly==23.10.4
-cryptography==46.0.2
-dnspython==2.8.0
-eventlet==0.40.3
-fastapi==0.118.2
-fastjsonschema==2.21.2
-Flask==3.1.2
-flask-cors==6.0.1
-Flask-SocketIO==5.5.1
-frozenlist==1.7.0
-fyers_apiv3==3.1.7
-greenlet==3.2.4
-h11==0.16.0
-hyperlink==21.0.0
-idna==3.10
-incremental==24.7.2
-itsdangerous==2.2.0
-Jinja2==3.1.6
-jmespath==0.10.0
-kiteconnect==5.0.1
-MarkupSafe==3.0.3
-mibian==0.1.3
-multidict==6.6.4
-numpy==2.3.3
-pandas==2.3.3
-propcache==0.3.2
-protobuf==5.29.3
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.23
-pydantic==2.12.0
-pydantic_core==2.41.1
-pyOpenSSL==25.3.0
-pyotp==2.9.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-python-engineio==4.12.3
-python-socketio==5.14.1
-pytz==2025.2
-pywin32==311
-PyYAML==6.0.3
-ratelimit==2.2.1
-requests==2.31.0
-s3transfer==0.14.0
-scipy==1.16.2
-service-identity==24.2.0
-simple-websocket==1.1.0
-six==1.17.0
-sniffio==1.3.1
-starlette==0.48.0
-Twisted==25.5.0
-txaio==25.9.2
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
-uv==0.8.22
-websocket-client==1.6.1
-Werkzeug==3.1.3
-wrapt==1.17.3
-wsproto==1.2.0
-yarl==1.20.1
-zope.interface==8.0.1
+kiteconnect>=5.0.1
+mibian>=0.1.3
+pandas>=2.3.1
+pyotp>=2.9.0
+python-dotenv>=1.1.1
+pyyaml>=6.0.2
+ratelimit>=2.2.1
+requests>=2.31.0
+flask==3.1.2
+flask_cors==6.0.0
